@@ -67,7 +67,7 @@ name|IOException
 import|;
 end_import
 begin_comment
-comment|/**  * Reverse token string e.g. "country" => "yrtnuoc".  *  * @version $Id$  */
+comment|/**  * Reverse token string, for example "country" => "yrtnuoc".  *<p>  * If<code>marker</code> is supplied, then tokens will be also prepended by  * that character. For example, with a marker of&#x5C;u0001, "country" =>  * "&#x5C;u0001yrtnuoc". This is useful when implementing efficient leading  * wildcards search.  *</p>  *   * @version $Id$  */
 end_comment
 begin_class
 DECL|class|ReverseStringFilter
@@ -83,6 +83,62 @@ specifier|private
 name|TermAttribute
 name|termAtt
 decl_stmt|;
+DECL|field|marker
+specifier|private
+specifier|final
+name|char
+name|marker
+decl_stmt|;
+DECL|field|NOMARKER
+specifier|private
+specifier|static
+specifier|final
+name|char
+name|NOMARKER
+init|=
+literal|'\uFFFF'
+decl_stmt|;
+comment|/**    * Example marker character: U+0001 (START OF HEADING)     */
+DECL|field|START_OF_HEADING_MARKER
+specifier|public
+specifier|static
+specifier|final
+name|char
+name|START_OF_HEADING_MARKER
+init|=
+literal|'\u0001'
+decl_stmt|;
+comment|/**    * Example marker character: U+001F (INFORMATION SEPARATOR ONE)    */
+DECL|field|INFORMATION_SEPARATOR_MARKER
+specifier|public
+specifier|static
+specifier|final
+name|char
+name|INFORMATION_SEPARATOR_MARKER
+init|=
+literal|'\u001F'
+decl_stmt|;
+comment|/**    * Example marker character: U+EC00 (PRIVATE USE AREA: EC00)     */
+DECL|field|PUA_EC00_MARKER
+specifier|public
+specifier|static
+specifier|final
+name|char
+name|PUA_EC00_MARKER
+init|=
+literal|'\uEC00'
+decl_stmt|;
+comment|/**    * Example marker character: U+200F (RIGHT-TO-LEFT MARK)    */
+DECL|field|RTL_DIRECTION_MARKER
+specifier|public
+specifier|static
+specifier|final
+name|char
+name|RTL_DIRECTION_MARKER
+init|=
+literal|'\u200F'
+decl_stmt|;
+comment|/**    * Create a new ReverseStringFilter that reverses all tokens in the     * supplied {@link TokenStream}.    *<p>    * The reversed tokens will not be marked.     *</p>    *     * @param in {@link TokenStream} to filter    */
 DECL|method|ReverseStringFilter
 specifier|public
 name|ReverseStringFilter
@@ -91,10 +147,36 @@ name|TokenStream
 name|in
 parameter_list|)
 block|{
+name|this
+argument_list|(
+name|in
+argument_list|,
+name|NOMARKER
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Create a new ReverseStringFilter that reverses and marks all tokens in the    * supplied {@link TokenStream}.    *<p>    * The reversed tokens will be prepended (marked) by the<code>marker</code>    * character.    *</p>    *     * @param in {@link TokenStream} to filter    * @param marker A character used to mark reversed tokens    */
+DECL|method|ReverseStringFilter
+specifier|public
+name|ReverseStringFilter
+parameter_list|(
+name|TokenStream
+name|in
+parameter_list|,
+name|char
+name|marker
+parameter_list|)
+block|{
 name|super
 argument_list|(
 name|in
 argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|marker
+operator|=
+name|marker
 expr_stmt|;
 name|termAtt
 operator|=
@@ -125,6 +207,44 @@ name|incrementToken
 argument_list|()
 condition|)
 block|{
+name|int
+name|len
+init|=
+name|termAtt
+operator|.
+name|termLength
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|marker
+operator|!=
+name|NOMARKER
+condition|)
+block|{
+name|len
+operator|++
+expr_stmt|;
+name|termAtt
+operator|.
+name|resizeTermBuffer
+argument_list|(
+name|len
+argument_list|)
+expr_stmt|;
+name|termAtt
+operator|.
+name|termBuffer
+argument_list|()
+index|[
+name|len
+operator|-
+literal|1
+index|]
+operator|=
+name|marker
+expr_stmt|;
+block|}
 name|reverse
 argument_list|(
 name|termAtt
@@ -132,10 +252,14 @@ operator|.
 name|termBuffer
 argument_list|()
 argument_list|,
+name|len
+argument_list|)
+expr_stmt|;
 name|termAtt
 operator|.
-name|termLength
-argument_list|()
+name|setTermLength
+argument_list|(
+name|len
 argument_list|)
 expr_stmt|;
 return|return
