@@ -232,6 +232,153 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testFilterWithMark
+specifier|public
+name|void
+name|testFilterWithMark
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|TokenStream
+name|stream
+init|=
+operator|new
+name|WhitespaceTokenizer
+argument_list|(
+operator|new
+name|StringReader
+argument_list|(
+literal|"Do have a nice day"
+argument_list|)
+argument_list|)
+decl_stmt|;
+comment|// 1-4 length string
+name|ReverseStringFilter
+name|filter
+init|=
+operator|new
+name|ReverseStringFilter
+argument_list|(
+name|stream
+argument_list|,
+literal|'\u0001'
+argument_list|)
+decl_stmt|;
+name|TermAttribute
+name|text
+init|=
+operator|(
+name|TermAttribute
+operator|)
+name|filter
+operator|.
+name|getAttribute
+argument_list|(
+name|TermAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|filter
+operator|.
+name|incrementToken
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"\u0001oD"
+argument_list|,
+name|text
+operator|.
+name|term
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|filter
+operator|.
+name|incrementToken
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"\u0001evah"
+argument_list|,
+name|text
+operator|.
+name|term
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|filter
+operator|.
+name|incrementToken
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"\u0001a"
+argument_list|,
+name|text
+operator|.
+name|term
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|filter
+operator|.
+name|incrementToken
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"\u0001ecin"
+argument_list|,
+name|text
+operator|.
+name|term
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|filter
+operator|.
+name|incrementToken
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"\u0001yad"
+argument_list|,
+name|text
+operator|.
+name|term
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|filter
+operator|.
+name|incrementToken
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testReverseString
 specifier|public
 name|void
